# python-directory-starter

./: .gitignore  LICENSE  MANIFEST.in  README.md  main.py  setup.cfg
.ve_strcuture-builder-env/: pyvenv.cfg
.ve_strcuture-builder-env/Scripts/: activate  activate.bat
data/raw/: README_text.txt  gitignore_text.txt
src/: __init__.py  structure.py
src/directory-starter/: LICENSE_text.py  README_text.py  __init__.py  __main__.py  directory_starter.py  gitignore_text.py  pyproject_text.py  setup.cfg_text.py  setup.py_text.py  structure.py
