[metadata]
name = directory-starter
version = 0.0.14
author = Hannah Weber
author_email = hannah.weber.git@gmail.com
description = A small package to initialize a basic python project structure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hannahweber244/python-directory-starter
project_urls =
    Bug Tracker = https://github.com/hannahweber244/python-directory-starter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
